// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correctly 1`] = `
.c1 {
  vertical-align: middle;
}

.c0 {
  border-radius: 50%;
  overflow: hidden;
  text-transform: uppercase;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-image: url();
  background-size: cover;
  height: 2.5rem;
  width: 2.5rem;
  font-size: 1.25rem;
}

<div
  className="c0"
  size="medium"
>
  <svg
    className="c1"
    fill="none"
    height="1em"
    viewBox="0 0 20 20"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.94 9.574c2.387 0 4.322-1.92 4.322-4.287C14.262 2.92 12.327 1 9.94 1 7.552 1 5.617 2.92 5.617 5.287c0 2.368 1.935 4.287 4.323 4.287zM18.471 16.23l-.341-1.805c-.341-1.692-1.706-2.82-3.185-2.82h-1.82c-.228 0-.569 0-.796.113-.683.225-1.48.451-2.39.451-.91 0-1.592-.113-2.274-.338-.228-.113-.455-.113-.797-.113h-1.82c-1.592 0-2.843 1.128-3.185 2.595l-.34 1.918c-.115.564.227 1.015.682 1.24 2.275.903 8.986 2.934 15.697 0 .455-.225.683-.676.57-1.24z"
      stroke="currentColor"
      strokeLinecap="round"
      strokeMiterlimit={10}
      strokeWidth={1.1}
    />
  </svg>
</div>
`;

exports[`Avatar renders correctly with background color 1`] = `
.c1 {
  vertical-align: middle;
}

.c0 {
  background-color: red;
  border-radius: 50%;
  overflow: hidden;
  text-transform: uppercase;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-image: url();
  background-size: cover;
  height: 2.5rem;
  width: 2.5rem;
  font-size: 1.25rem;
}

<div
  className="c0"
  size="medium"
>
  <svg
    className="c1"
    fill="none"
    height="1em"
    viewBox="0 0 20 20"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.94 9.574c2.387 0 4.322-1.92 4.322-4.287C14.262 2.92 12.327 1 9.94 1 7.552 1 5.617 2.92 5.617 5.287c0 2.368 1.935 4.287 4.323 4.287zM18.471 16.23l-.341-1.805c-.341-1.692-1.706-2.82-3.185-2.82h-1.82c-.228 0-.569 0-.796.113-.683.225-1.48.451-2.39.451-.91 0-1.592-.113-2.274-.338-.228-.113-.455-.113-.797-.113h-1.82c-1.592 0-2.843 1.128-3.185 2.595l-.34 1.918c-.115.564.227 1.015.682 1.24 2.275.903 8.986 2.934 15.697 0 .455-.225.683-.676.57-1.24z"
      stroke="currentColor"
      strokeLinecap="round"
      strokeMiterlimit={10}
      strokeWidth={1.1}
    />
  </svg>
</div>
`;

exports[`Avatar renders correctly with large size 1`] = `
.c1 {
  vertical-align: middle;
}

.c0 {
  border-radius: 50%;
  overflow: hidden;
  text-transform: uppercase;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-image: url();
  background-size: cover;
  height: 3rem;
  width: 3rem;
  font-size: 1.5rem;
}

<div
  className="c0"
  size="large"
>
  <svg
    className="c1"
    fill="none"
    height="1em"
    viewBox="0 0 20 20"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.94 9.574c2.387 0 4.322-1.92 4.322-4.287C14.262 2.92 12.327 1 9.94 1 7.552 1 5.617 2.92 5.617 5.287c0 2.368 1.935 4.287 4.323 4.287zM18.471 16.23l-.341-1.805c-.341-1.692-1.706-2.82-3.185-2.82h-1.82c-.228 0-.569 0-.796.113-.683.225-1.48.451-2.39.451-.91 0-1.592-.113-2.274-.338-.228-.113-.455-.113-.797-.113h-1.82c-1.592 0-2.843 1.128-3.185 2.595l-.34 1.918c-.115.564.227 1.015.682 1.24 2.275.903 8.986 2.934 15.697 0 .455-.225.683-.676.57-1.24z"
      stroke="currentColor"
      strokeLinecap="round"
      strokeMiterlimit={10}
      strokeWidth={1.1}
    />
  </svg>
</div>
`;

exports[`Avatar renders correctly with medium size 1`] = `
.c1 {
  vertical-align: middle;
}

.c0 {
  border-radius: 50%;
  overflow: hidden;
  text-transform: uppercase;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-image: url();
  background-size: cover;
  height: 2.5rem;
  width: 2.5rem;
  font-size: 1.25rem;
}

<div
  className="c0"
  size="medium"
>
  <svg
    className="c1"
    fill="none"
    height="1em"
    viewBox="0 0 20 20"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.94 9.574c2.387 0 4.322-1.92 4.322-4.287C14.262 2.92 12.327 1 9.94 1 7.552 1 5.617 2.92 5.617 5.287c0 2.368 1.935 4.287 4.323 4.287zM18.471 16.23l-.341-1.805c-.341-1.692-1.706-2.82-3.185-2.82h-1.82c-.228 0-.569 0-.796.113-.683.225-1.48.451-2.39.451-.91 0-1.592-.113-2.274-.338-.228-.113-.455-.113-.797-.113h-1.82c-1.592 0-2.843 1.128-3.185 2.595l-.34 1.918c-.115.564.227 1.015.682 1.24 2.275.903 8.986 2.934 15.697 0 .455-.225.683-.676.57-1.24z"
      stroke="currentColor"
      strokeLinecap="round"
      strokeMiterlimit={10}
      strokeWidth={1.1}
    />
  </svg>
</div>
`;

exports[`Avatar renders correctly with small size 1`] = `
.c1 {
  vertical-align: middle;
}

.c0 {
  border-radius: 50%;
  overflow: hidden;
  text-transform: uppercase;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-image: url();
  background-size: cover;
  height: 2rem;
  width: 2rem;
  font-size: 1.125rem;
}

<div
  className="c0"
  size="small"
>
  <svg
    className="c1"
    fill="none"
    height="1em"
    viewBox="0 0 20 20"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.94 9.574c2.387 0 4.322-1.92 4.322-4.287C14.262 2.92 12.327 1 9.94 1 7.552 1 5.617 2.92 5.617 5.287c0 2.368 1.935 4.287 4.323 4.287zM18.471 16.23l-.341-1.805c-.341-1.692-1.706-2.82-3.185-2.82h-1.82c-.228 0-.569 0-.796.113-.683.225-1.48.451-2.39.451-.91 0-1.592-.113-2.274-.338-.228-.113-.455-.113-.797-.113h-1.82c-1.592 0-2.843 1.128-3.185 2.595l-.34 1.918c-.115.564.227 1.015.682 1.24 2.275.903 8.986 2.934 15.697 0 .455-.225.683-.676.57-1.24z"
      stroke="currentColor"
      strokeLinecap="round"
      strokeMiterlimit={10}
      strokeWidth={1.1}
    />
  </svg>
</div>
`;

exports[`Avatar renders correctly with user image 1`] = `
.c0 {
  border-radius: 50%;
  overflow: hidden;
  text-transform: uppercase;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-image: url(image-url);
  background-size: cover;
  height: 2.5rem;
  width: 2.5rem;
  font-size: 1.25rem;
}

<div
  className="c0"
  size="medium"
/>
`;

exports[`Avatar renders correctly with user name as a JSX Element 1`] = `
.c0 {
  border-radius: 50%;
  overflow: hidden;
  text-transform: uppercase;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-image: url();
  background-size: cover;
  height: 2.5rem;
  width: 2.5rem;
  font-size: 1.25rem;
}

<div
  className="c0"
  name={
    <span>
      JS
    </span>
  }
  size="medium"
>
  <span>
    JS
  </span>
</div>
`;

exports[`Avatar renders correctly with user name as a string 1`] = `
.c0 {
  border-radius: 50%;
  overflow: hidden;
  text-transform: uppercase;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-image: url();
  background-size: cover;
  height: 2.5rem;
  width: 2.5rem;
  font-size: 1.25rem;
}

<div
  className="c0"
  name="JS"
  size="medium"
>
  JS
</div>
`;

exports[`Avatar renders correctly with xsmall size 1`] = `
.c1 {
  vertical-align: middle;
}

.c0 {
  border-radius: 50%;
  overflow: hidden;
  text-transform: uppercase;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-image: url();
  background-size: cover;
  height: 1.5rem;
  width: 1.5rem;
  font-size: 0.875rem;
}

<div
  className="c0"
  size="xsmall"
>
  <svg
    className="c1"
    fill="none"
    height="1em"
    viewBox="0 0 20 20"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.94 9.574c2.387 0 4.322-1.92 4.322-4.287C14.262 2.92 12.327 1 9.94 1 7.552 1 5.617 2.92 5.617 5.287c0 2.368 1.935 4.287 4.323 4.287zM18.471 16.23l-.341-1.805c-.341-1.692-1.706-2.82-3.185-2.82h-1.82c-.228 0-.569 0-.796.113-.683.225-1.48.451-2.39.451-.91 0-1.592-.113-2.274-.338-.228-.113-.455-.113-.797-.113h-1.82c-1.592 0-2.843 1.128-3.185 2.595l-.34 1.918c-.115.564.227 1.015.682 1.24 2.275.903 8.986 2.934 15.697 0 .455-.225.683-.676.57-1.24z"
      stroke="currentColor"
      strokeLinecap="round"
      strokeMiterlimit={10}
      strokeWidth={1.1}
    />
  </svg>
</div>
`;
